# NLSL

./: .gitignore  AGENTS.md  BL05CHSA.py  BL05CHSA_pythonic.py  Doxyfile  LICENSE.md  Makefile  Makefilef77  README.md  TESTING_NOTES.md  TMPDMP17_fullscm.run  addprm.f  addprm.f90  anxlk.f  assgnc.f  assgnc.f90  basis.inc  basisc.f  basisc.f90  baswt.inc  bessel.f  bessel.f90  bessi.f  bessi0.f  bessi1.f  bincom.inc  break_down_example.py  break_down_test.py  brent.f  brent.f90  bssl.f  c16pc371e.py  c16pc371e_oldformat.py  caldlm.f  ccrin1.f  ccrint.f  ccrints.f  ccrints.f90  cd2km.f  cfs.f90  (+270 more)
.github/workflows/: publish.yml
doc/latex/: iterat_8f90.tex  lmcom_8f90.tex  namespaceiterat.tex  namespacelmcom.tex  namespaceparcom.tex  namespacestdio.tex  parcom_8f90.tex  sscale_8f90.tex  sshift_8f90.tex  stdio_8f90.tex
examples/: 230621_w0_10.DSC  230621_w0_10.DTA  README.rst  break_down_example.py  c16pc371e.py  c16pc371e_pythonic.py  multicomponent_single_point.py  pyspec_differential_evolution.py  pyspec_example.py  qt_example.py  runexample.py  runexample_first.py  sampl1_pythonic.py  sampl2_pythonic.py  sampl2a_pythonic.py  sampl3.ind  sampl3_pythonic.py  sampl3a_pythonic.py  sampl4.run  sampl4_fixed_parameters_plot.py  sampl4_pythonic.py  sampl4_singlepoint.py  sampl5.ind  sampl5_pythonic.py  sampl6.run
nlsl/: __init__.py  cli.py  logging.py
src/fortran/: addprm.f90  anxlk.f90  assgnc.f90  basis.f90  basisc.f90  bessel.f90  bincom.f90  brent.f90  caldlm.f90  cd2km.f90  cfs.f90  cgltri.f90  confc.f90  convtc.f90  covrpt.f90  dchex.f90  dfunc.f90  enorm.f90  eprls.f90  eprmat.f90  eprprm.f90  errmsg.f90  expdat.f90  fitc.f90  fitl.f90  fixc.f90  gconvl.f90  getdat.f90  helpc.f90  iterat.f90  lbasix.f90  lcheck.f90  lfun.f90  lgrint.f90  lmcom.f90  lmnls.f90  lmpar.f90  matrll.f90  momdls.f90  mspctr.f90  (+37 more)
src/fortran/core/: lpnam.f90
tests/: conftest.py  run_example.py  runexample_first.py  runfile_helpers.py  sampl4_reference.py  test_current_spectrum.py  test_load_nddata_limits.py  test_parameter_collection.py  test_parameters_interface.py  test_procline_aliases.py  test_procline_set.py  test_pyspec_example_todos.py  test_pyspec_multiprocessing.py  test_runexample_first.py  test_runexamples.py  test_sampl1_pythonic_vs_procline.py  test_sampl4_best_parameters.py  test_sampl4_fit.py  test_sample1.py  test_vary_mapping.py
