[build-system]
requires = [
    "meson-python>=0.15",
    "meson>=1.2",
    "ninja>=1.11",        # ensure ninja is available in the build env
    "numpy>=1.26.5"
]
build-backend = "mesonpy"

[project]
name = "acert-nlsl"
version = "0.1.2"
description = "the ACERT NLSL package, now wrapped up in python!"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{name = "NLSL development team"}]
dependencies = [
    "sympy",
    "numpy>=1.26.5",
    "scipy",
    "matplotlib",
    "tables",
]
